--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version> <!-- 建议使用最新版本 -->
         </dependency>
+
+        <!-- FastJson 核心依赖 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.39</version> <!-- 截至2024年最新稳定版 -->
+        </dependency>
     </dependencies>
 
     <build>
