--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.39</version> <!-- 截至2024年最新稳定版 -->
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.4</version> <!-- 最新稳定版 -->
+        </dependency>
     </dependencies>
 
     <build>
